# ghidra-sleigh

./: .gitignore  Cargo.toml
arch/6502/: Cargo.toml  build.rs
arch/6502/src/: lib.rs
arch/6502/tests/: fuzz.rs
arch/x86/: Cargo.toml  build.rs
arch/x86/fuzz/: Cargo.toml
arch/x86/fuzz/fuzz_targets/: fuzz_target_1.rs
build-script-helper/: Cargo.toml
build-script-helper/src/: lib.rs  main.rs
generator/: Cargo.toml
generator/src/: lib.rs
parser/: Cargo.toml
parser/src/: lib.rs
sleigh-generator/: Cargo.toml
sleigh-generator/src/: lib.rs
sleigh-parser/: Cargo.toml
sleigh-parser/src/: context.rs  lib.rs  parse.rs
src/: ast.rs  context.rs  main.rs  parse.rs  rust_gen.rs
types/: Cargo.toml
types/src/: ast.rs  context.rs
