[package]
name = "sleigh-6502"
version = "0.1.0"
edition = "2021"
publish = false

[build-dependencies]
sleigh-parser = { path = "../../parser" }
sleigh-types = { path = "../../types" }
sleigh-generator = { path = "../../generator" }
prettyplease = "0.1.22"
syn = "1.0.107"

[dev-dependencies]
disasm6502 = "0.2.2"
